--- a/styles/style.css
+++ b/styles/style.css
@@ -58,6 +58,26 @@ p {
   font-size: 24px;
 }
 
+.about-section {
+  padding: 80px 20px;
+  text-align: center;
+}
+
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+
+.about-section h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+
+.about-section-content {
+  margin: 30px;
+  text-align: left;
+}
+
 .btn-branding {
   background: var(--branding-color);
   border-radius: 4px;
@@ -74,6 +94,10 @@ p {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+}
+
+.my-photo {
+  width: 40%;
 }
 
 @media (max-width: 900px) {
@@ -93,5 +117,9 @@ p {
   .project-description {
     padding: 0;
     text-align: center;
+  }
+
+  .about-section {
+    padding: 0;
   }
 }
