--- a/styles/style.css
+++ b/styles/style.css
@@ -58,22 +58,22 @@ p {
   font-size: 24px;
 }
 
-.about-section {
+.content {
   padding: 80px 20px;
   text-align: center;
 }
 
-.about-section h1 {
+.content h1 {
   font-size: 64px;
   line-height: 80px;
 }
 
-.about-section h2 {
+.content h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
 }
 
-.about-section-content {
+.content-inner {
   margin: 30px;
   text-align: left;
 }
@@ -119,7 +119,7 @@ p {
     text-align: center;
   }
 
-  .about-section {
+  .content {
     padding: 0;
   }
 }
