--- a/styles/style.css
+++ b/styles/style.css
@@ -73,6 +73,16 @@ p {
   font-family: var(--default-font-family);
 }
 
+.content h3 {
+  font-size: 24px;
+  font-family: var(--default-font-family);
+  line-height: 1;
+}
+
+.content p {
+  font-size: 14px;
+}
+
 .content-inner {
   margin: 30px;
   text-align: left;
